styles/styles.css
* {
  padding: 0;
  margin: 0;
  border: none;
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: inherit;
}

input:focus {
  outline: none;
}

:root {
  /* Brand colors */
  --color-primary: #ffa8e9;
  --color-primary-dark: #ff75dd;
  --color-primary-darker: #ff42d0;

  /* Support colors */
  --color-cream: #f3e5d8;
  --color-chocolate: #5c3a2e;

  /* Texts */
  --color-text-white: #fff;
  --color-text-light: #6e5a52;
  --color-text-main: #3f3f3f;
  --color-bg-main: #fff6fb;
  --color-bg-section: #f3e5d8;
  --color-bg-card: #fff;
}

/* Animations */

@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

/* ----------------------------- */

/* Utilities */

.fade-in-animation {
  animation: fade-in 300ms ease forwards;
}

.pacifico-regular {
  font-family: 'Pacifico', cursive;
  font-weight: 400;
  font-style: normal;
}

.hidden {
  display: none;
}

/* ----------------------------- */

body {
  font-family: 'Poppins', sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--color-bg-main);
}

.button-primary {
  color: white;
  background-color: var(--color-primary-dark);
  box-shadow: 1px 6px 14px 1px rgba(0, 0, 0, 0.404);
  border-radius: 8px;
  transition: background-color 300ms ease;
  cursor: pointer;
}

.button-primary:hover {
  background-color: var(--color-primary-darker);
}

.dark-filter {
  position: relative;
}

.dark-filter::before {
  content: '';
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.473);
  z-index: 1;
}

.dark-filter-soft {
  position: relative;
}

.dark-filter-soft::before {
  content: '';
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.171);
  z-index: 1;
}

/* pacifico-regular - latin */
@font-face {
  font-display: swap;
  font-family: 'Pacifico';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/pacifico-v23-latin-regular.woff2') format('woff2');
}

/* poppins-regular - latin */
@font-face {
  font-display: swap;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

.hero-section {
  display: flex;
  position: relative;
  width: 100%;
  height: 50vh;
}

.hero-section img {
  position: absolute;
  object-position: bottom;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.hero-section .container {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  gap: 20px;
  margin-top: 200px;
  width: 100%;
  background-color: #5c3a2ea2;
  height: fit-content;
  padding: 20px;
  margin-block: auto;
  z-index: 2;
}

.hero-section h1 {
  color: var(--color-text-white);
  font-size: 2rem;
  font-weight: bold;
  opacity: 100%;
  width: 100%;
}

.hero-section__button {
  width: 200px;
  padding-block: 16px;
  font-size: 1.5rem;
}

.section {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  background-color: var(--color-bg-section);
  width: 100%;
  min-height: 72vh;
  border-bottom: 1px solid var(--color-chocolate);
}
.clients-testimonial-section {
  position: relative;
}

.clients-testimonial-section > * {
  position: relative;
  z-index: 2;
}

.clients-testimonial-section__image {
  position: absolute;
  height: 100%;
  width: 100%;
  object-fit: cover;
  z-index: 0;
}

.slides-section {
  height: 72vh;
}

.section-wrapper {
  display: flex;
  height: 100%;
  width: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 40px;
  padding: 40px;
  margin: auto;
}

.section-title {
  font-size: 1.4rem;
}

.cards {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 40px;
  width: 100%;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 496px;
  width: 100%;
  border-radius: 24px;
  overflow: hidden;
  background-color: var(--color-bg-card);
}

.card img {
  width: 100%;
  height: 50%;
  object-fit: cover;
  object-position: center;
  transition: scale 300ms ease-in;
}

.card img:hover {
  scale: 110%;
}

.card div {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding: 24px;
  gap: 8px;
  flex: 1;
}

.card__button {
  padding-block: 16px;
  width: 90%;
  font-size: 1.4rem;
  border-radius: 8px;
  margin-bottom: 24px;
}

.clients-testimonial-items {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 40px;
  width: 100%;
  height: 100%;
}

.clients-testimonial-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  width: 100%;
  height: 100%;
  color: white;
}

.clients-testimonial-item h3 {
  font-size: 1.8rem;
}

.clients-testimonial-item p {
  font-size: 1.2rem;
}

.avatar {
  border-radius: 50%;
  width: 152px;
  height: 152px;
  overflow: hidden;
}

.avatar img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.search-bar__container {
  display: flex;
  align-items: center;
  padding: 8px;
  background-color: var(--color-bg-main);
  width: 100%;
  height: 40px;
  overflow: hidden;
  border-radius: 16px;
}

.search-bar__input {
  width: 100%;
  height: 100%;
  padding-inline: 16px;
  background-color: inherit;
  font-size: 1rem;
}

.products {
  display: grid;
  grid-template-columns: 1fr;
  gap: 24px;
  width: 100%;
  min-height: 72vh;
}

.product {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 440px;
  overflow: hidden;
  border-radius: 8px;
  background-color: var(--color-bg-card);
  color: var(--color-text-main);
}

.product__image-container {
  width: 100%;
  height: 60%;
  overflow: hidden;
}

.product__image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: scale 300ms ease-in;
}

.product:hover .product__image{
  scale: 110%;
}

.product__link {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}
.product__content {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 16px;
  width: 100%;
  flex: 1;
  padding: 16px;
}

.product__information {
  display: flex;
  flex-direction: column;
  align-items: start;
}

.product__price {
  font-weight: bold;
  font-size: 1.2rem;
  color: var(--color-primary-darker);
}

.product__button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 40px;
  font-weight: bold;
  font-size: 1.1rem;
}

.slider-container {
  height: 80%;
  width: 100%;
}

.slider-wrapper {
  position: relative;
  width: 100%;
  height: 100%;
}

.slider {
  display: flex;
  border-radius: 2rem;
  width: 100%;
  height: 100%;
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
}

.slider::-webkit-scrollbar {
  display: none;
}

.slider img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  flex: 1 0 50%;
  scroll-snap-align: start;
}

.slider-nav {
  display: flex;
  position: absolute;
  bottom: 2rem;
  left: 50%;
  width: fit-content;
  height: 20px;
  gap: 16px;
  transform: translateX(-50%);
  z-index: 1;
}

.slider-nav a {
  border-radius: 50%;
  background-color: var(--color-cream);
  width: 20px;
  height: 20px;
  opacity: 60%;
}

.slider-nav a:hover {
  opacity: 100%;
}

.color-text-white {
  color: var(--color-text-white);
}

@media (min-width: 576px) {
  .products {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 768px) {
  .cards {
    flex-direction: row;
  }
  .card {
    flex: 0 0 400px;
    height: 468px;
  }

  .card__button {
    width: 200px;
    font-size: 1.2rem;
  }

  .slider-container {
    height: 500px;
    width: 572px;
  }

  .clients-testimonial-item {
    width: 60%;
  }

  .products {
    grid-template-columns: repeat(3, 1fr);
  }

  .search-bar__container {
    width: 480px;
    margin-right: auto;
  }
}

@media (min-width: 1200px) {
  .hero-section {
    height: 90vh;
  }

  .hero-section h1 {
    font-size: 4rem;
  }

  .hero-section__button {
    width: 360px;
    font-size: 2rem;
  }

  .section {
    padding-inline: 224px;
  }

  .clients-testimonial-section {
    height: 72vh;
  }

  .section-title {
    font-size: 2rem;
  }

  .clients-testimonial-items {
    flex-direction: row;
    gap: 56px;
  }

  .clients-testimonial-item {
    width: 400px;
  }

  .products {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (max-width: 1757px) {
  .cards {
    flex-wrap: wrap;
    justify-content: center;
  }
}

